welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:17: error: unclosed comment
   	/*else {
        ^Diagonal:17: error: unclosed comment
   	/*else {
        ^Diagonal:17: error: unclosed comment
   	/*else {
        ^Diagonal:1: error: Missing closing brace `}' assumed here
override def run() {
^Diagonal:1: error: expected start of definition
override def run() {
         ^Diagonal:17: error: unclosed comment
   	/*else {
        ^